--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
-            android:gravity=""
+            android:gravity="bottom"
             android:textAlignment="textEnd"
             android:text="0"
             android:textSize="64dp" />
