--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,9 +49,9 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designacbutton"
             android:onClick="funcButton"
-            android:text="Ac"
+            android:text="AC"
             android:textSize="24sp" />
 
         <Button
@@ -60,7 +60,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designacbutton"
             android:onClick="funcButton"
             android:text="+/-"
             android:textSize="24sp" />
@@ -71,7 +71,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designacbutton"
             android:onClick="funcButton"
             android:text="%"
             android:textSize="24sp" />
@@ -82,7 +82,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designoperatorbutton"
             android:onClick="funcButton"
             android:text="/"
             android:textSize="24sp" />
@@ -100,7 +100,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="7"
             android:textSize="24sp" />
@@ -111,7 +111,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="8"
             android:textSize="24sp" />
@@ -122,7 +122,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="9"
             android:textSize="24sp" />
@@ -133,7 +133,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designoperatorbutton"
             android:onClick="funcButton"
             android:text="x"
             android:textSize="24sp" />
@@ -151,7 +151,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="4"
             android:textSize="24sp" />
@@ -162,7 +162,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="5"
             android:textSize="24sp" />
@@ -173,7 +173,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="6"
             android:textSize="24sp" />
@@ -184,7 +184,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designoperatorbutton"
             android:onClick="funcButton"
             android:text="-"
             android:textSize="24dp" />
@@ -202,7 +202,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="1"
             android:textSize="24sp" />
@@ -213,7 +213,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="2"
             android:textSize="24sp" />
@@ -224,7 +224,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="3"
             android:textSize="24sp" />
@@ -235,7 +235,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designoperatorbutton"
             android:onClick="funcButton"
             android:text="+"
             android:textSize="24sp" />
@@ -253,7 +253,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="0"
             android:textSize="24sp" />
@@ -264,7 +264,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="."
             android:textSize="24sp" />
@@ -275,7 +275,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="@drawable/designbutton"
+            android:background="@drawable/designoperatorbutton"
             android:onClick="funcButton"
             android:text="="
             android:textSize="24sp" />
