--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/black"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -47,8 +49,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
             android:background="@drawable/designacbutton"
+            android:layout_weight="0.5"
             android:onClick="funcButton"
             android:text="AC"
             android:textSize="24sp" />
@@ -102,7 +104,8 @@
             android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="7"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            tools:ignore="NestedWeights" />
 
         <Button
             android:id="@+id/buttonEight"
