--- a/app/src/main/res/drawable/designnumbutton.xml
+++ b/app/src/main/res/drawable/designnumbutton.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Set the shape of the drawable (rectangle in this case) -->
-    <solid android:color="#6E6867"/> <!-- Set the RGB color using hexadecimal notation -->
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <shape android:shape="rectangle">
 
-    <!-- Set the corner radius for rounded corners (you can adjust this value as needed) -->
-    <corners android:radius="250dp"/>
+        <!-- Set the shape of the drawable (rectangle in this case) -->
+        <solid android:color="#6E6867"/> <!-- Set the RGB color using hexadecimal notation -->
 
-    <!-- Add any other attributes or effects as needed -->
-</shape>
+        <!-- Set the corner radius for rounded corners (you can adjust this value as needed) -->
+        <corners android:radius="250dp"/>
+
+        <!-- Add any other attributes or effects as needed -->
+    </shape>
+</selector>
