--- a/app/src/main/res/drawable/designacbutton.xml
+++ b/app/src/main/res/drawable/designacbutton.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Set the shape of the drawable (rectangle in this case) -->
-    <solid android:color="#4D4646"/> <!-- Set the RGB color using hexadecimal notation -->
-
-    <!-- Set the corner radius for rounded corners (you can adjust this value as needed) -->
-    <corners android:radius="250dp"/>
-
-    <!-- Add any other attributes or effects as needed -->
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <!-- Set the shape of the drawable (rectangle in this case) -->
+            <solid android:color="#4D4646"/> <!-- Set the RGB color using hexadecimal notation -->
+            <!-- Set the corner radius for rounded corners (you can adjust this value as needed) -->
+            <corners android:radius="250dp"/>
+            <!-- Add any other attributes or effects as needed -->
+        </shape>
+    </item>
+</selector>
