--- a/app/src/main/res/drawable/designoperatorbutton.xml
+++ b/app/src/main/res/drawable/designoperatorbutton.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <shape android:shape="rectangle">
-        <!-- Set the shape of the drawable (rectangle in this case) -->
-        <solid android:color="#F79F0B"/> <!-- Set the RGB color using hexadecimal notation -->
+    <item>
+        <shape android:shape="rectangle">
+            <!-- Set the shape of the drawable (rectangle in this case) -->
+            <solid android:color="#F79F0B"/> <!-- Set the RGB color using hexadecimal notation -->
+            <!-- Set the corner radius for rounded corners (you can adjust this value as needed) -->
+            <corners android:radius="250dp"/>
+            <!-- Add any other attributes or effects as needed -->
+        </shape>
+    </item>
 
-        <!-- Set the corner radius for rounded corners (you can adjust this value as needed) -->
-        <corners android:radius="250dp"/>
-
-        <!-- Add any other attributes or effects as needed -->
-    </shape>
 </selector>
