--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/black"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -15,8 +16,8 @@
 
         <TextView
             android:id="@+id/textViewSolution"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="129dp"
+            android:layout_height="130dp"
             android:layout_above="@id/textViewResult"
             android:layout_margin="16dp"
             android:layout_weight="0.7"
@@ -25,8 +26,8 @@
 
         <TextView
             android:id="@+id/textViewResult"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="176dp"
+            android:layout_height="135dp"
             android:layout_weight="0.7"
             android:text="0"
             android:textSize="64dp" />
@@ -44,7 +45,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
+            android:background="@drawable/designacbutton"
             android:onClick="funcButton"
             android:text="AC"
             android:textSize="24sp" />
@@ -54,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designacbutton"
             android:onClick="funcButton"
             android:text="+/-"
@@ -65,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designacbutton"
             android:onClick="funcButton"
             android:text="%"
@@ -76,7 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designoperatorbutton"
             android:onClick="funcButton"
             android:text="/"
@@ -94,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="7"
@@ -106,7 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="8"
@@ -117,7 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="9"
@@ -128,7 +130,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designoperatorbutton"
             android:onClick="funcButton"
             android:text="x"
@@ -146,7 +148,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="4"
@@ -157,7 +159,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="5"
@@ -168,7 +170,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="6"
@@ -179,7 +181,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designoperatorbutton"
             android:onClick="funcButton"
             android:text="-"
@@ -197,7 +199,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="1"
@@ -208,7 +210,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="2"
@@ -219,7 +221,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="3"
@@ -230,7 +232,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.25"
             android:background="@drawable/designoperatorbutton"
             android:onClick="funcButton"
             android:text="+"
@@ -252,7 +254,7 @@
             android:background="@drawable/designnumbutton"
             android:onClick="funcButton"
             android:text="0"
-            android:textSize="24sp" />
+            android:textSize="24dp" />
 
         <Button
             android:id="@+id/buttonDot"
