--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,21 +16,18 @@
 
         <TextView
             android:id="@+id/textViewSolution"
-            android:layout_width="129dp"
-            android:layout_height="130dp"
+            android:layout_width="183dp"
+            android:layout_height="133dp"
             android:layout_above="@id/textViewResult"
             android:layout_margin="16dp"
-            android:layout_weight="0.7"
-            android:text="0"
-            android:textSize="32dp" />
+            android:textSize="48sp" />
 
         <TextView
             android:id="@+id/textViewResult"
-            android:layout_width="176dp"
-            android:layout_height="135dp"
-            android:layout_weight="0.7"
+            android:layout_width="163dp"
+            android:layout_height="wrap_content"
             android:text="0"
-            android:textSize="64dp" />
+            android:textSize="30dp" />
 
     </LinearLayout>
 
