--- a/app/src/main/res/drawable/designoperatorbutton.xml
+++ b/app/src/main/res/drawable/designoperatorbutton.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <!-- Set the shape of the drawable (rectangle in this case) -->
-            <solid android:color="#F79F0B"/> <!-- Set the RGB color using hexadecimal notation -->
+            <solid android:color="#FF9E0B"/> <!-- Set the RGB color using hexadecimal notation -->
             <!-- Set the corner radius for rounded corners (you can adjust this value as needed) -->
             <corners android:radius="250dp"/>
             <!-- Add any other attributes or effects as needed -->
