--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:id="@+id/textViewResult"
             android:layout_width="163dp"
             android:layout_height="wrap_content"
-            android:text="0"
+            android:text=""
             android:textSize="40dp" />
 
     </LinearLayout>
@@ -44,7 +44,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designacbutton"
-            android:onClick="funcButton"
+            android:onClick="onAcClick"
             android:text="AC"
             android:textColor="@color/black"
             android:textSize="30dp" />
@@ -56,7 +56,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designacbutton"
-            android:onClick="funcButton"
+            android:onClick="onOperatorClick"
             android:text="±"
             android:textColor="@color/black"
             android:textSize="40dp" />
@@ -68,7 +68,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designacbutton"
-            android:onClick="funcButton"
+            android:onClick="onOperatorClick"
             android:text="%"
             android:textColor="@color/black"
             android:textSize="40dp" />
@@ -80,7 +80,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designoperatorbutton"
-            android:onClick="funcButton"
+            android:onClick="onOperatorClick"
             android:text="/"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -99,7 +99,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
-            android:onClick="funcButton"
+            android:onClick="onNumberClick"
             android:text="7"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -111,7 +111,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
-            android:onClick="funcButton"
+            android:onClick="onNumberClick"
             android:text="8"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -123,7 +123,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
-            android:onClick="funcButton"
+            android:onClick="onNumberClick"
             android:text="9"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -135,7 +135,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designoperatorbutton"
-            android:onClick="funcButton"
+            android:onClick="onOperatorClick"
             android:text="x"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -154,7 +154,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
-            android:onClick="funcButton"
+            android:onClick="onNumberClick"
             android:text="4"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -166,7 +166,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
-            android:onClick="funcButton"
+            android:onClick="onNumberClick"
             android:text="5"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -178,7 +178,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
-            android:onClick="funcButton"
+            android:onClick="onNumberClick"
             android:text="6"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -190,7 +190,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designoperatorbutton"
-            android:onClick="funcButton"
+            android:onClick="onOperatorClick"
             android:text="-"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -209,7 +209,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
-            android:onClick="funcButton"
+            android:onClick="onNumberClick"
             android:text="1"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -221,7 +221,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
-            android:onClick="funcButton"
+            android:onClick="onNumberClick"
             android:text="2"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -233,7 +233,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designnumbutton"
-            android:onClick="funcButton"
+            android:onClick="onNumberClick"
             android:text="3"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -245,7 +245,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designoperatorbutton"
-            android:onClick="funcButton"
+            android:onClick="onOperatorClick"
             android:text="+"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -264,7 +264,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.33"
             android:background="@drawable/designnumbutton"
-            android:onClick="funcButton"
+            android:onClick="onNumberClick"
             android:text="0"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -276,7 +276,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.5"
             android:background="@drawable/designnumbutton"
-            android:onClick="funcButton"
+            android:onClick="onNumberClick"
             android:text="."
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -288,7 +288,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.5"
             android:background="@drawable/designoperatorbutton"
-            android:onClick="funcButton"
+            android:onClick="onEqualClick"
             android:text="="
             android:textColor="@color/white"
 
