--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,18 +16,12 @@
 
         <TextView
             android:id="@+id/textViewSolution"
-            android:layout_width="183dp"
-            android:layout_height="133dp"
-            android:layout_above="@id/textViewResult"
-            android:layout_margin="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
             android:textSize="40dp" />
 
-        <TextView
-            android:id="@+id/textViewResult"
-            android:layout_width="163dp"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textSize="40dp" />
 
     </LinearLayout>
 
@@ -56,7 +50,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.25"
             android:background="@drawable/designacbutton"
-            android:onClick="onOperatorClick"
+            android:onClick="onSubtractClick"
             android:text="±"
             android:textColor="@color/black"
             android:textSize="40dp" />
@@ -276,7 +270,7 @@
             android:layout_margin="5dp"
             android:layout_weight="0.5"
             android:background="@drawable/designnumbutton"
-            android:onClick="onNumberClick"
+            android:onClick="onDotClick"
             android:text="."
             android:textColor="@color/white"
             android:textSize="40dp" />
